@startuml
title Implementación B: Uso de referencias a objetos Persona

class Persona {
    - String nombre
    - String dni
}

class Nodo {
    - Persona persona
    - Nodo siguiente
    + Nodo(Persona persona, Nodo siguiente)
}

class Lista {
    - Nodo cabeza
    + insertarPersona(Persona p)
}

Persona "1" --> "1 referencia" Nodo : referencia
Lista "1" o--> "1..*" Nodo : administra

object manuel {
    nombre = "Manuel"
    dni = "1234"
}
object copia {
    nombre = "Manuel"
    dni = "1234"
}
object referencia {
    nombre = "Manuel"
    dni = "1234"
}

manuel --> Nodo : referencia compartida
copia --> Nodo : referencia compartida
referencia --> Nodo : referencia compartida

Nodo --> Nodo : siguiente nodo
@enduml
